--- a/Program/TimeAndTune/TimeAndTune/MainWindow.xaml
+++ b/Program/TimeAndTune/TimeAndTune/MainWindow.xaml
@@ -7,6 +7,7 @@
         mc:Ignorable="d" 
         WindowState="Maximized"
         Height="1080" Width="1920"
+        MinHeight="600" MinWidth="600"
         Background="black"
         Title="Time&amp;Tune"
         Icon ="/logo.png"
